# Chip8Emu

./: .gitignore  CMakeLists.txt  README.md
include/: cpu.hpp
src/: cpu.cpp  main.cpp  main.cpp.save
